--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
-  <main class="container w-100 main-section d-flex justify-content-center align-items-center">
+  <main class="container h-100 main-section d-flex justify-content-center align-items-center">
     <div class="row ">
       <div class="col-lg-6 px-lg-5 d-flex justify-content-center align-items-center">
         <div class="text-white ">
