--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <script src="https://kit.fontawesome.com/6ea5d4f02d.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -12,18 +11,18 @@
   
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
-<body>
-  <main class="container h-100 main-section d-flex justify-content-center align-items-center">
-    <div class="row ">
-      <div class="col-lg-6 px-lg-5 d-flex justify-content-center align-items-center">
-        <div class="text-white ">
+<body class="">
+  <main class="container main-section py-lg-5">
+    <div class="row gy-4">
+      <div class="col-lg-6 px-lg-5 d-flex align-items-center">
+        <div class="text-white">
           <h1 class="heading mb-4">Learn to code by <br> watching others</h1>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, quae. Eius eaque vel, alias, excepturi reiciendis tempora facilis tempore quos ex hic nobis.
           </p>
         </div>
       </div>
-      <div class="col-lg-6 px-5">
+      <div class="col-lg-6 px-lg-5">
         <div class="w-100">
           <div class="text-white text-center p-3 mb-4 bg-blue rounded-3 shadow">
             <span><b>Try it free 7 days </b>then $20/mo. thereafter</span>
@@ -62,9 +61,9 @@
   </main>
   
   <footer>
-    <p class="attribution">
+    <p class="attribution mb-0 py-4 py-lg-2">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Rifat Ishtiyak</a>.
+      Coded by <a href="https://github.com/ishtiyak98" target="_blank">Ishtiyak</a>.
     </p>
   </footer>
 
